Src/Resources/KtaneWeb.css
/* ... */
    #actual-periodic-table .Hard {
        background-color: #fed;
    }

    #actual-periodic-table .VeryHard {
        background-color: #fdd;
    }

    #actual-periodic-table .souvenir {
        position: absolute;
        left: 35px;
        top: -1px;
        font-size: 8pt;
        text-align: left;
    }

    #actual-periodic-table .tpscore {
        position: absolute;
        right: 2px;
        top: -1px;
        font-size: 8pt;
        text-align: right;
    }

    #actual-periodic-table .name {
        position: absolute;
        left: 0;
        right: 0;
        top: 36px;
        bottom: 1px;
        font-family: 'Agency FB';
        font-size: 9pt;
        line-height: 1;
    }

        #actual-periodic-table .name .inner {
            position: absolute;
            left: 50%;
            top: 50%;
            width: 100%;
            transform: translate(-50%, -50%);
            line-height: .9;
        }

#module-ui table td, #module-ui table th {
    border: none;
}

#module-ui table th {
    font-size: 16pt;
    font-weight: bold;
    white-space: nowrap;
}

#module-ui table.fields th {
    text-align: right;
}

#module-ui table.nested > * > tr > th {
    text-align: left;
    font-size: 12pt;
}

    #module-ui table.nested > * > tr > th h2 {
        font-size: 20pt;
        border-bottom: 1px solid #888;
        margin: 0;
    }

#module-ui table.nested > tbody > tr > td {
    vertical-align: top;
}

#module-ui table td .explain {
    font-size: 9pt;
    white-space: pre-line;
}

#module-ui table td input:not([type="checkbox"]), #module-ui table td select, #module-ui table td textarea {
    width: 100%;
    box-sizing: border-box;
}

#module-ui table td textarea {
    height: 10em;
}

#legal {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: .6;
    border-top: 1px solid #888;
    font-size: 10pt;
    padding: .5em;
}

/* Desktop version for narrow screens */
@media screen and (max-width: 1090px) and (min-width: 650.01px) {
    body {
        font-size: 12pt;
        max-width: none;
    }

    .header {
        flex-direction: column;
        align-items: center;
        justify-items: center;
    }

    #logo {
        text-align: center;
    }

    #icons {
        width: 35em;
        margin: 0 auto 2em;
        padding-top: 0;
        text-align: right;
    }

        #icons > * {
            text-align: center;
        }

    td.infos-1 {
        padding: .2em 2.2em .2em .7em;
    }

        td.infos-1 div.modlink-wrap {
            margin: 0;
        }

            td.infos-1 div.modlink-wrap .mod-icon {
                float: left;
                margin: .1em .5em 0 0 !important;
            }

            td.infos-1 div.modlink-wrap a.modlink .mod-name {
                margin: 0;
            }

        td.infos-1 div.infos {
            padding: .1em 0;
            position: relative;
            margin-left: 3em;
        }

            td.infos-1 div.infos > div.inf-type,
            td.infos-1 div.infos > div.inf-author,
            body.display-difficulty td.infos-1 div.infos > div.inf-difficulty,
            body.display-origin td.infos-1 div.infos > div.inf-origin,
            body.display-published td.infos-1 div.infos > div.inf-published,
            body.display-twitch td.infos-1 div.infos > div.inf-twitch,
            body.display-time-mode td.infos-1 div.infos > div.inf-time-mode,
            body.display-souvenir td.infos-1 div.infos > div.inf-souvenir,
            body.display-symbol td.infos-1 div.infos > div.inf-symbol,
            body.display-quirks td.infos-1 div.infos > div.inf-quirks,
            body.display-id td.infos-1 div.infos > div.inf-id,
            body.display-rule-seed td.infos-1 div.infos > div.inf-rule-seed {
                display: inline;
            }

            td.infos-1 div.infos > div.inf-id::before,
            td.infos-1 div.infos > div.inf2::before {
                content: '\a0 • ';
            }

            td.infos-1 div.infos > div.inf-author::before {
                content: ' • by ';
            }

    body.display-description td.infos-1 div.infos > div.inf-description,
    body.display-quirks td.infos-1 div.infos > div.inf-quirks-id,
    body.display-id td.infos-1 div.infos > div.inf-quirks-id {
        display: block;
    }

    td.infos-2, th.infos {
        display: none;
    }

    body.sort-name th.modlink::after {
        content: '   • sorted by name';
    }

    body.sort-defdiff th.modlink::after {
        content: '   • sorted by defuser difficulty';
    }

    body.sort-expdiff th.modlink::after {
        content: '   • sorted by expert difficulty';
    }

    body.sort-twitch-score th.modlink::after {
        content: '   • sorted by TP:KTANE score';
    }

    body.sort-time-mode-score th.modlink::after {
        content: '   • sorted by TP:KTANE score';
    }

    body.sort-published th.modlink::after {
        content: '   • sorted by publication date';
    }

    #more {
        width: 33em;
    }

    tr.mod[data-compatibility="Untested"] .mod-name, tr.mod[data-compatibility="Unplayable"] .mod-name, tr.mod[data-compatibility="Problematic"] .mod-name {
        padding-left: 3.5em;
        background-position: 2.25em 50%;
    }

    #main-table th {
        top: 40px;
    }

        #main-table th.modlink {
            border-right: 1px solid black;
        }

    #main-table td.infos-1 {
        border-right: 1px solid black;
    }
}
/* ... */

